# osmod_utils

./: README.md  pyproject.toml
.github/workflows/: docs.yml
src/osmod_utils/: __init__.py  settings.py
