[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "osmod_utils"
version = "0.0.1"
authors = [
  { name="Kian Wee CHEN", email="chenkianwee@gmail.com" },
]
description = 'Python library for working with OpenstudioSDK Python binding'
readme = "README.md"
requires-python = '>=3.10,<3.15'
classifiers = ["License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
               "Programming Language :: Python :: 3.10",
               "Operating System :: OS Independent"]
dependencies = ['geomie3d>=0.0.10',
                'openstudio>=3.10.0',
                'ladybug-core>=0.44.30',
                'ifc_utils>=0.0.5'
                ]

[project.optional-dependencies]
viewer3d = ['geomie3d[viewer3d]==0.0.10']

[project.urls]
"Homepage" = "https://github.com/chenkianwee/ifc_utils"
"Bug Tracker" = "https://github.com/chenkianwee/ifc_utils/issues"

[tool.setuptools.packages.find]
where = ["src"]